--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+.splitter {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
 .traits-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -13,4 +19,20 @@
 
 #output {
     margin-top: 20px;
+}
+
+.instructions {
+    background-color: rgb(220,220,220)
+}
+
+h1 {
+    margin: 0px;
+}
+
+h2 {
+    margin: 0px;
+}
+
+p {
+    margin-top: 5px;
 }
