--- a/index.css
+++ b/index.css
@@ -17,6 +17,14 @@
     margin-bottom: 20px;
 }
 
+.button-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 3fr;
+    grid-auto-rows: minmax(2em, auto);
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
 #output {
     margin-top: 20px;
 }
